# signal-harvester

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: golden-validate.yml  pages.yml
configs/profiles/: ai-research.yaml  daily-briefing.yaml  personal-finance.yaml  security-grc.yaml  soccer-intel.yaml
docs/: adding-a-domain.md  llamacpp-backend.md  setup.md
frontend/: .env.static  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: App.tsx  main.tsx  types.ts  vite-env.d.ts
harvester/: __main__.py  api.py  cluster.py  config.py  eval.py  export.py  extract.py  logging_setup.py  obsidian.py  pipeline.py  social.py
harvester/enrich/: client.py  perception.py  prompts.py  schemas.py
harvester/sources/: base.py  rss.py
harvester/store/: db.py  writers.py
prompts/: enrichment.md
scripts/: export_golden.py  publish.cmd  publish_site.cmd  refresh_twitter.py  run_harvester.cmd  smoke_test_v2.py  start_llamaserver.cmd  start_llamaserver.ps1  validate_golden.py
site/: index.html  sw.js
site/assets/: index-13Rc4hH3.css  index-BEyX3CxD.css  index-BhQuHMeU.js  index-Bply4I2f.js  (+18 more)
tests/: test_backfill.py  test_client.py  test_cluster.py  test_config.py  test_dedup.py  test_feed_health.py  test_golden.py  test_prompt_hash.py  test_prune.py  test_reddit_topic_search.py  test_rss_reddit_throttle.py  test_schemas.py  test_social.py  test_social_backfill.py  test_social_comment_urls.py  test_trends.py
(+79 files in other folders)
