[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signal-harvester"
version = "0.1.0"
description = "A configurable, fully local RSS intelligence pipeline with LLM enrichment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.27",
    "trafilatura>=1.12",
    "openai>=1.50",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
harvester = "harvester.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["harvester"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["harvester"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: requires a running Ollama instance (skipped in CI)",
]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
